@@ -858,19 +858,12 @@ fport_close (SCM port)
   return 0;
 }
 
-static size_t
-fport_free (SCM port)
-{
-  fport_close (port);
-  return 0;
-}
-
 static scm_t_bits
 scm_make_fptob ()
 {
   scm_t_bits tc = scm_make_port_type ("file", fport_fill_input, fport_write);
 
-  scm_set_port_free            (tc, fport_free);
+  scm_set_port_needs_close_on_gc (tc, 1);
   scm_set_port_print           (tc, fport_print);
   scm_set_port_flush           (tc, fport_flush);
   scm_set_port_end_input       (tc, fport_end_input);
