@@ -24,6 +24,17 @@ as arguments to the `setvbuf' function.
 Port mark functions have not been called since the switch to the BDW
 garbage collector.
 
+** Remove `scm_set_port_free'
+
+It used to be that if an open port became unreachable, a special "free"
+function would be called instead of the "close" function.  Now that the
+BDW-GC collector allows us to run arbitrary code in finalizers, we can
+simplify to just call "close" on the port and remove the separate free
+functions.  Note that hooking into the garbage collector has some
+overhead.  For that reason Guile exposes a new interface,
+`scm_set_port_needs_close_on_gc', allowing port implementations to
+indicate to Guile whether they need closing on GC or not.
+
 
 Changes in 2.1.2 (changes since the 2.1.1 alpha release):
 
